--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/aurylabs/aury-uikit",
+  "repository": "https://github.com/furylabsfinance/ftm-uikit",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
